add favicon and add margin top to the badge

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrinetraAI | AI-Powered Technology Intelligence & Forecasting</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta
       name="description"
       content="TrinetraAI - Automated technology intelligence platform transforming scattered data into strategic insights for DRDO. Real-time forecasting with AI-driven analysis."
